# EspFlasher

./: .gitignore  CMakeLists.txt  EspFlasher  EspFlasher.pro  EspProcess.cpp  LICENSE  README.md  appimage.sh  main.cpp  main.qml  main.qmlc  version.txt
linux/: espflasher.desktop  espflasher.xcf
src/: CRadioDelegate.qml  EspProcess.h  main.qml  qml.qrc
